syntax = "proto3";

package com.mission.netty.eighthExample;

option java_package="com.mission.netty.eighthExample.proto";
option java_outer_classname="StudentProto";
option java_multiple_files =true;

service StudentService{
    rpc GetRealNameByUsername(MyRequest) returns (MyResponse){}
    /*报错了,参数不是期望的值, 必须是message类型*/
    //rpc GetStudentByAge(int32) returns (stream StudentResponse){}

    /*流式数据 ,类似集合 ,一个一个地 传输*/
    rpc GetStudentByAge(StudentRequest) returns (stream StudentResponse){}

    /*该方法返回的也是流??*/
    rpc GetStudentWrapperByAge(stream StudentRequest) returns (StudentResponseList){}
}

message MyRequest{
    string username =1 ;
}

message MyResponse{
    string realname =2 ;
}

message StudentResponse{
    string name =1 ;
    int32 age =2 ;
    string city = 3 ;
}

message StudentRequest{
    int32 age =1 ;

}

message StudentResponseList{
    repeated StudentResponse studentResponse = 1;
}